# PixivDownloader-WebUI

./: .dockerignore  .gitignore  Dockerfile  README.ja.md  README.md  README.zh-CN.md  docker-compose.yaml  pyproject.toml  run-backend-dev.bat  run-frontend-dev.bat  run-install.bat  run-webui.bat
.github/workflows/: ci.yml  docker-release.yml
auth-browser/: Dockerfile  package.json  start.sh
auth-browser/src/: server.js
backend/: __init__.py  app.py
backend/api/: dependencies.py  routes_artists.py  routes_artwork_files.py  routes_dashboard.py  routes_downloads.py  routes_health.py  routes_imports.py  routes_jobs.py  routes_logs.py  routes_scheduled_tasks.py  routes_settings.py  routes_workflow_triggers.py  routes_workflows.py
backend/core/: config.py  errors.py  paths.py
config/: settings.example.json
docs/: README.md  api-reference.md  architecture.md  configuration.md  database-migrations.md  database.md  deployment.md  development.md  getting-started.md  ui-verification.md  verification.md  webui-architecture.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.app.json  vite.config.ts
tests/: test_advanced_workflow_runner.py  test_avatar_cache_service.py  test_backend_api.py  test_database_migrations.py  test_download_service.py  test_download_worker.py  test_file_downloader.py  test_legacy_import_hydration_service.py  test_legacy_import_service.py  test_pixiv_client.py  test_pixiv_oauth.py  test_repositories.py  test_workflow_run_recovery.py  test_workflow_schedule_service.py
tools/: migrate_settings_to_config.py
(+158 files in other folders)
