[project]
name = "pixivdownloader-sqlite"
version = "1.1.0"
description = "A local PyQt Pixiv downloader backed by SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "PyQt6",
    "pixivpy3",
    "requests",
    "PyYAML",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ARG"]
ignore = []

[tool.ruff.lint.per-file-ignores]
"app/views/main_window.py" = ["ARG002"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
