[project]
name = "pixivdownloader-sqlite"
version = "0.2.0"
description = "A local WebUI Pixiv downloader backed by SQLite."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi",
    "pixivpy3",
    "pydantic",
    "python-multipart",
    "requests",
    "PyYAML",
    "uvicorn",
]

[project.optional-dependencies]
dev = [
    "httpx",
    "pytest",
    "ruff",
    "websockets",
]

[tool.setuptools.packages.find]
include = ["backend*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.ruff]
line-length = 100
target-version = "py312"
exclude = ["legacy"]

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "SIM", "C4", "ARG"]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
